--- a/CSS/shadow.css
+++ b/CSS/shadow.css
@@ -1,5 +1,8 @@
+body{
+    background-color:#d2ffff;
+}
 h1{
-    text-shadow: 3px 3px 5px #616161, -3px -3px 5px #ffffa5;
+    text-shadow: 3px 3px 5px #616161, -3px -3px 5px #ffff71;
 }
 
 #box{
